<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata jadi lebih seru!</string>
    <string name="signin">Sign In</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion?</string>
    <string name="explore">Explore Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="we_highly_suggest_you_to_nuse_the_correct_informations">We highly suggest you to \nuse the correct informations</string>


</resources>